--- a/src/html/registration.html
+++ b/src/html/registration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторизация - Школьный Вопрос</title>
+    <title>Регистрация - Школьный Вопрос</title>
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,24 +22,31 @@
             <h3 class="subtitle subtitle_wh">Гимназия №6</h3>
         </section>
 
-        <section class="window">
-            <a href="registration.html" class="switcher">
-                <span class="switcher__btn switcher__btn_active">Авторизация</span>
-                <span class="switcher__btn">Регистрация</span>
+        <section class="window window_registration">
+            <a href="authorization.html" class="switcher">
+                <span class="switcher__btn">Авторизация</span>
+                <span class="switcher__btn switcher__btn_active">Регистрация</span>
             </a>
-            <form class="window__form window__form_authorization window__form_active" action="">
+            <form class="window__form window__form_active window__form_registration" action="">
                 <div class="form__wrapper">
                     <div class="text">Email</div>
                     <input class="form__input" type="email">
                 </div>
                 <div class="form__wrapper">
+                    <div class="text">Логин</div>
+                    <input class="form__input" type="text">
+                </div>
+                <div class="form__wrapper">
                     <div class="text">Пароль</div>
                     <input class="form__input" type="password">
                 </div>
+                <div class="form__wrapper">
+                    <div class="text">Дата рождения</div>
+                    <input class="form__input" type="date">
+                </div>
             </form>
-            <button class="window__forgot-password window__forgot-password_active" data-modal="forgot-password">Забыли пароль?</button>
             <div class="controls">
-                <a href='index.html' class="controls controls_cancel">Отмена</a>
+                <a href='javascript:history. back()' class="controls controls_cancel">Отмена</a>
                 <button class="controls controls_confirm" data-node="">Подтвердить</button>
             </div>
             <div class="circle circle_authorization"></div>
@@ -67,7 +74,7 @@
             </div>
         </form>
         <div class="controls">
-            <button class="controls controls_cancel cancel_modal">Отмена</button>
+            <a href="index.html" class="controls controls_cancel cancel_modal">Отмена</a>
             <button class="controls controls_confirm confirm_modal">Подтвердить</button>
         </div>
     </div>
